force-app/main/default/objects/ampi__Risk_Register__c/ampi__Risk_Register__c.object-meta.xml
<CustomObject>
    <description>Track risks associated with projects/grants so staff can have better visibility into identified risks across a portfolio</description>
    <label>Risk Register</label>
    <nameField>
        <label>Risk Register Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Registers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>