force-app/main/default/objects/ampi__Risk_Register__c/fields/ampi__Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Risk Registers must be associated with a Project so that grant-makers can, at the grant/project-level, make decisions on the grant/project based on the related Risks.</description>
    <inlineHelpText>Associated with a Project with a Risk Register so that grant-makers can, at the grant/project-level, make decisions on the grant/project based on the related Risks</inlineHelpText>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Risk Registers</relationshipLabel>
    <relationshipName>Risk_Registers</relationshipName>
    <type>Lookup</type>
</CustomField>