force-app/main/default/objects/ampi__Risk_Register__c/fields/ampi__xx_Risk_Register_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Risk_Register_Type__c</fullName>
    <description>Picklist field used to specify the type of a Risk Register</description>
    <label>Risk Register Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>