force-app/main/default/objects/ampi__Risk_Register__c/fields/Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification__c</fullName>
    <label>Email Notification</label>
    <length>10</length>
    <type>Text</type>
</CustomField>