force-app/main/default/objects/ampi__Risk_Register__c/fields/InsertedByBulk__c.field-meta.xml
<CustomField>
    <fullName>InsertedByBulk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inserted By Bulk</label>
    <type>Checkbox</type>
</CustomField>