force-app/main/default/objects/ampi__Risk_Register__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ampi__Geographical_Area__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Programme</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ampi__Geographical_Area__c</referenceTo>
    <relationshipLabel>Location Security Risk Assessments</relationshipLabel>
    <relationshipName>Risk_Registers</relationshipName>
    <type>Lookup</type>
</CustomField>