force-app/main/default/objects/ampi__Risk_Register__c/fields/Programme_Name__c.field-meta.xml
<CustomField>
    <fullName>Programme_Name__c</fullName>
    <formula>HYPERLINK(&apos;/s/geographical-area/&apos; + Programme__c , Programme__r.Name, &apos;_self&apos;)</formula>
    <label>Programme Name</label>
    <type>Text</type>
</CustomField>