force-app/main/default/objects/ampi__Risk_Register__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Waiting for approval</fullName>
            </value>
            <value>
                <fullName>Aligned</fullName>
            </value>
            <value>
                <fullName>Revision needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>