force-app/main/default/objects/ampi__Risk_Register__c/fields/Status_Val__c.field-meta.xml
<CustomField>
    <fullName>Status_Val__c</fullName>
    <formula>TEXT(Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>