force-app/main/default/objects/ampi__Risk_Register__c/validationRules/Creation_Only_AllowTo_RiskReviewer.validationRule-meta.xml
<ValidationRule>
    <fullName>Creation_Only_AllowTo_RiskReviewer</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
NOT(OR(Programme__r.Parent_MA__r.NA_Risk_Reviewer__r.Email = $User.Email,$Profile.Name == &quot;System Administrator&quot;)))</errorConditionFormula>
    <errorMessage>Unsufficient rights to create a Location Security Risk Assessment. Only Risk Reviewer from the MA can create it.</errorMessage>
</ValidationRule>