force-app/main/default/objects/ampi__Risk_Register__c/validationRules/Edit_RiskRegister_NA_Director_Reviewer.validationRule-meta.xml
<ValidationRule>
    <fullName>Edit_RiskRegister_NA_Director_Reviewer</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(TEXT(Status__c) = &apos;Approved&apos;,
TEXT(Status__c) = &apos;Declined&apos;,
ISCHANGED(Name),
ISCHANGED(Status__c),
ISCHANGED(Comments__c),
ISCHANGED(General_Notes__c),
ISCHANGED(OwnerId),
ISCHANGED(Programme__c)),NOT(OR(Programme__r.Parent_MA__r.NA_Risk_Reviewer__r.Email = $User.Email, Programme__r.Parent_MA__r.NA_Director__r.Email = $User.Email, $Profile.Name == &quot;System Administrator&quot;)))</errorConditionFormula>
    <errorMessage>Only NA Director or Risk Reviewer are allowed to edit a risk register that is related to this NA on status &quot;Draft&quot; or &quot;Pending Revise&quot;</errorMessage>
</ValidationRule>